# c-interop-test-golang

./: .gitignore  go.mod  main.go
c-component/: .gitignore  CMakeLists.txt
c-component/include/: c_component.h
c-component/src/: c_component.c
c-component/tests/: test_main.c
